# hyper-heuristic-trading-agent

./: .gitignore  Cargo.toml  SECURITY.md  SECURITY_REVIEW.md  docker-compose.dev.yml  docker-compose.yml  env.example  readme.md
Specification/: AAsystem_architecture.md  database_abstraction_layer.md  explainable_ai_service.md  hyper_heuristic_strategy.md  model_training_pipeline.md  sentiment_analysis_engine.md
Specification/2 - Data Ingestion/: data_validation_quality.md  market_data_ingestion.md  news_data_ingestion.md  realtime_stream_processor.md
Specification/4 - ML-AI/: tensorrt_inference_engine.md
Specification/5 - Business Logic/: strategy_optimization_spec.md
Specification/7 - Monitoring & Operations/: alerting_spec.md  metrics_collection_spec.md
configuration-management/: Cargo.toml
configuration-management/src/: config_manager.rs  config_store.rs  config_validator.rs  config_watcher.rs  errors.rs  feature_flags.rs  health.rs  lib.rs  models.rs  secret_manager.rs  sources.rs  tests.rs
docs/Specification/: system_integration_validation.md
docs/Specification/1 - Core Infrastructure/: configuration_management.md  error_handling.md  logging_monitoring.md
docs/Specification/3 - Feature Engineering/: feature_storage_retrieval.md  market_regime_detection.md  technical_indicators_engine.md
docs/Specification/5 - Business Logic/: performance_evaluation.md  prediction_service.md  risk_management_spec.md
docs/Specification/6 - API Layer/: api_gateway.md  authentication_authorization_spec.md  rate_limiting_spec.md  websocket_service.md
docs/Specification/7 - Monitoring & Operations/: health_checks_spec.md  performance_monitoring_spec.md
error-handling/: Cargo.toml  README.md
error-handling/examples/: basic_usage.rs
error-handling/src/: circuit_breaker.rs  config.rs  error_handler.rs  error_types.rs  fallback.rs  lib.rs  reporter.rs  retry.rs
examples/: basic_usage.rs
frontend/: package.json
logging-monitoring/: Cargo.toml  README.md
logging-monitoring/examples/: basic_usage.rs  comprehensive_example.rs  performance_monitoring.rs
logging-monitoring/src/: config.rs  error.rs  events.rs  health.rs  lib.rs  logging.rs  metrics.rs  monitoring.rs  tracing.rs
logging-monitoring/tests/: integration_test.rs
market-data-ingestion/: Cargo.toml  Dockerfile  README.md  config.toml  docker-compose.yml  env.example  fresh_module_structure.md
market-data-ingestion/config/: development.toml  production.toml  testing.toml
market-data-ingestion/config/clickhouse/: quantumtrade.xml
market-data-ingestion/examples/: basic_collection.rs  batch_processing.rs  complete_integration.rs  data_quality_validation.rs  debug_config.rs  intelligent_collection.rs  rate_limit_demo.rs  test_config_access.rs
market-data-ingestion/scripts/: README.md  benchmark.ps1  setup.ps1  start-dev.ps1  test-api.ps1
market-data-ingestion/src/: alpha_vantage.rs  batch_processor.rs  config.rs  config_provider.rs  data_quality.rs  errors.rs  health.rs  lib.rs  metrics.rs  models.rs  rate_limiter.rs  scheduler.rs  service.rs
market-data-ingestion/src/collectors/: alpha_vantage.rs  mod.rs
market-data-ingestion/src/processors/: data_processor.rs  mod.rs
market-data-ingestion/tests/: integration_tests.rs
ml-training/: requirements.txt  train.py
scripts/: check-database.ps1  clickhouse-config.xml  deploy.sh  dev-reset.sh  dev-setup.sh  dev-test.sh  fix-services.ps1  init-db.sql  run-migrations.ps1  setup-db.sql  setup.ps1  start-databases.ps1  test-connections.ps1
services/api-gateway/: Cargo.toml
services/data-ingestion/: Cargo.toml  README.md
services/data-ingestion/config/: data-ingestion.toml
services/data-ingestion/src/: Dockerfile  config.rs  handlers.rs  main.rs  news_client.rs  reddit_client.rs  scheduler.rs  yahoo_client.rs
services/explanation-service/: requirements.txt
services/feature-engineering/: Cargo.toml
services/feature-engineering/src/: main.rs
services/hyper-heuristic/: Cargo.toml
services/ml-inference/: Cargo.toml
services/performance-monitor/: Cargo.toml
shared-libs/core-traits/: Cargo.toml
shared-libs/core-traits/src/: lib.rs
shared-libs/database-abstraction/: Cargo.toml  README.md
shared-libs/database-abstraction/examples/: basic_usage.rs  run_migrations.rs
shared-libs/database-abstraction/migrations/: README.md
shared-libs/database-abstraction/migrations/clickhouse/: 001_create_market_data.sql  002_create_sentiment_data.sql  003_create_features.sql  004_create_predictions.sql  005_create_prediction_outcomes.sql  006_create_strategy_performance.sql
shared-libs/database-abstraction/src/: config.rs  errors.rs  health.rs  lib.rs  traits.rs
shared-libs/database-abstraction/src/clickhouse/: client.rs  migrations.rs  mod.rs  models.rs  queries.rs
shared-libs/database-abstraction/src/redis/: client.rs  mod.rs  operations.rs
shared-libs/shared-types/: Cargo.toml
shared-libs/shared-types/src/: common.rs  features.rs  lib.rs  market_data.rs  predictions.rs  sentiment_data.rs
shared/types/: Cargo.toml
shared/types/src/: features.rs  lib.rs  market_data.rs  predictions.rs
shared/utils/: Cargo.toml
shared/utils/src/: clickhouse.rs  error.rs  lib.rs  monitoring.rs
shared/utils/tests/: integration_tests.rs
terraform/: main.tf  outputs.tf  variables.tf
vscode/: launch.json  settings.json  tasks.json
