# Cargo.toml (root workspace)
[workspace]
resolver = "2"
members = [
    "shared/types",
    "shared/utils"
]

[workspace.dependencies]
# Async runtime and HTTP
tokio = { version = "1.35", features = ["full"] }
axum = { version = "0.7", features = ["ws", "headers"] }
tower = { version = "0.4", features = ["util", "timeout", "load-shed"] }
tower-http = { version = "0.5", features = ["fs", "trace", "cors"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP client
reqwest = { version = "0.11", features = ["json", "stream"] }

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-opentelemetry = "0.22"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Time and UUID
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }

# Data processing
polars = { version = "0.35", features = ["lazy", "temporal", "strings"] }

# Database and cache
clickhouse = { version = "0.11", features = ["time", "uuid"] }

# Configuration
config = "0.13"
dotenvy = "0.15"

# Security
jsonwebtoken = "9.2"
argon2 = "0.5"

# Metrics and monitoring
metrics = "0.22"
metrics-exporter-prometheus = "0.13"

# Development dependencies
tokio-test = "0.4"
testcontainers = "0.15"