[package]
name = "configuration-management"
version = "0.1.0"
edition = "2021"

[dependencies]
# Workspace dependencies
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
config = { workspace = true }
rust_decimal = { workspace = true }

# Local dependencies
shared-types = { path = "../shared-libs/shared-types" }

# AWS SDK for configuration sources
aws-config = "1.0"
aws-sdk-ssm = "1.0"
aws-sdk-secretsmanager = "1.0"
aws-sdk-s3 = "1.0"

# Utilities
futures = "0.3"
dashmap = "5.5"
crossbeam-channel = "0.5"
once_cell = "1.19"
parking_lot = "0.12"

# Validation
validator = { version = "0.16", features = ["derive"] }

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
tempfile = "3.8" 