[package]
name = "configuration-management"
version = "0.1.0"
edition = "2021"

[dependencies]
# Workspace dependencies
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
anyhow = { workspace = true }
tracing = "0.1"
config = { workspace = true }
rust_decimal = { workspace = true }

# Local dependencies
shared-types = { path = "../shared-libs/shared-types" }

# AWS SDK for configuration sources
aws-config = "1.0"
aws-sdk-ssm = "1.0"
aws-sdk-secretsmanager = "1.0"
aws-sdk-s3 = "1.0"

# Utilities
futures = "0.3"
dashmap = "5.0"
crossbeam-channel = "0.5"
once_cell = "1.19"
parking_lot = "0.12"
tokio-stream = "0.1"
notify = "6.0"
dotenv = "0.15"

# Validation
validator = { version = "0.16", features = ["derive"] }
rand = { version = "0.8", features = ["std"] }

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
tempfile = "3.8" 
