[package]
name = "market-data-ingestion"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core infrastructure (with standardized traits)
core-traits = { path = "../shared-libs/core-traits" }
shared-types = { path = "../shared-libs/shared-types" }
database-abstraction = { path = "../shared-libs/database-abstraction" }
configuration-management = { path = "../configuration-management" }

# External dependencies
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = { version = "1.0", features = ["serde"] }
async-trait = "0.1"
uuid = { version = "1.0", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1.0"
dotenv = "0.15"

[dev-dependencies]
tokio-test = "0.4"
wiremock = "0.5" 