[package]
name = "shared-utils"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
redis = { version = "0.23", features = ["tokio-comp"] }
clickhouse = "0.11"
tracing = "0.1"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
shared-types = { path = "../types" } 