# shared/utils/Cargo.toml
[package]
name = "shared-utils"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
clickhouse = { workspace = true }
redis = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
url = "2.4"
dotenvy = { workspace = true }
shared-types = { path = "../types" }

[dev-dependencies]
tokio-test = { workspace = true }
testcontainers = { workspace = true }